NeuralSight-Medical-Imaging-master/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vers-dep
  name: vers-dep
  namespace: neurallabs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vers-dep
  template:
    metadata:
      labels:
        app: vers-dep
    spec:
      containers:
        - args:
            - /start.sh
          image: registry.neurallabs.africa/vers:v02-patch
          imagePullPolicy: Always
          name: vers-dep
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {}
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: /app/artifacts
              name: artifacts
            - mountPath: /app/images
              name: images
            - mountPath: /app/runs
              name: runs
            - mountPath: /app/wandb
              name: wandb
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /home/vinc3/data/artifacts
            type: DirectoryOrCreate
          name: artifacts
        - hostPath:
            path: /home/vinc3/data/images
            type: DirectoryOrCreate
          name: images
        - hostPath:
            path: /home/vinc3/data/runs
            type: DirectoryOrCreate
          name: runs
        - hostPath:
            path: /home/vinc3/data/wandb
            type: DirectoryOrCreate
          name: wandb
