NeuralSight-Medical-Imaging-master/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vers-svc
  name: vers-svc
  namespace: neurallabs
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
  selector:
    app: vers-dep
