NeuralSight-Medical-Imaging-master/deploy/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vers-http
  namespace: neurallabs
spec:
  entryPoints:
    - web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vers-https
  namespace: neurallabs
spec:
  entryPoints:
    - websecure
